<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:padding="40dp"
            android:src="@drawable/sign_up_illus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#ffff9104"
            android:textSize="35sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="@string/Email_id"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_text_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="35dp"
                android:background="#00FFFFFF"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:padding="14dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/visibility_icon_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/icon_password_visible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_text_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_con_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="35dp"
                android:background="#00FFFFFF"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/visibility_icon_sign_up_conf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/icon_password_visible" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/sign_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_button_bg"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ProgressBar
                android:id="@+id/signup_loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="19dp"

                android:layout_weight="1"
                android:indeterminateTint="@color/white" />

            <LinearLayout
                android:id="@+id/sign_button_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/login_button_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/login_in_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/login_text"
                android:textColor="@color/main_orange"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>