<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:foregroundTint="#FFFFFF"
    android:scrollbarSize="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <ImageView
            android:id="@+id/loginIllustrationImage"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/login_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login_text"
            android:textColor="#ffff9104"
            android:textSize="35sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/emailEditText"
            app:layout_constraintTop_toBottomOf="@id/loginIllustrationImage" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="@string/Email_id"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:singleLine="true"

            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginText"
            app:layout_constraintWidth_percent="0.85" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_text_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwdEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginEnd="35dp"
                android:background="#00FFFFFF"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:padding="14dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/visibility_icon_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/icon_password_visible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:text="Forgot Password?"
            android:textColor="#000000"
            android:textFontWeight="400"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_bg"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <ProgressBar
                android:id="@+id/login_loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="19dp"

                android:layout_weight="1"
                android:indeterminateTint="@color/white" />

            <LinearLayout
                android:id="@+id/login_button_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/login_button_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:background="#e4e4e4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  OR  "
                android:textColor="#CCC8C8"
                android:textSize="10sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:background="#e4e4e4" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/google_login_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/google_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_google"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="14sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/fb_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/facebook_login_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/fb_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_facebook"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="14sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/sign_up"
                android:textColor="@color/main_orange"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>